--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.2')
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
